# SimpleCLI

./: CLI_lib_test.cpp  CMakeLists.txt  README.md
include/: Argument.h  Command.h  Context.h  Interface.h
src/: Argument.cpp  Command.cpp  Context.cpp  Interface.cpp
